--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,15 @@ Mkfile.old
 dkms.conf
 
 .vs
+*.user
+/x86
+/x64
+*.iobj
+
+*.ipdb
+.vscode
+*.iobj
+*.ipdb
+x64
+/msbuild/x64
+/msbuild/Release
